--- a/k8s/base/deployment.yml
+++ b/k8s/base/deployment.yml
@@ -2,7 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: ready-for-production
-  team: devops
+  namespace: messages
+  labels:
+    app: ready-for-production
+    team: devops
 spec:
   replicas: 1
   selector:
