--- a/k8s/base/ingress.yml
+++ b/k8s/base/ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ready-for-production
+  namespace: messages
   labels:
     name: ready-for-production
   annotations:
