--- a/k8s/base/service.yml
+++ b/k8s/base/service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ready-for-production
+  namespace: messages
 spec:
   selector:
     app: ready-for-production
